--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "collaborative"
   ],
   "author": "deep-assistant",
-  "license": "MIT",
+  "license": "Unlicense",
   "bugs": {
     "url": "https://github.com/deep-assistant/hive-mind/issues"
   },
