Update memory-check workflow to use Node.js 20.x; remove support for Node.js 18.x

--- a/.github/workflows/memory-check.yml
+++ b/.github/workflows/memory-check.yml
@@ -15,7 +15,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x]
     
     steps:
     - uses: actions/checkout@v4
@@ -81,7 +81,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x]
     
     steps:
     - uses: actions/checkout@v4
@@ -161,7 +161,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x]
     
     steps:
     - uses: actions/checkout@v4
