--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline for main branch
 
 on:
   push:
@@ -14,6 +14,7 @@ jobs:
       mjs-changed: ${{ steps.changes.outputs.mjs }}
       package-changed: ${{ steps.changes.outputs.package }}
       docs-changed: ${{ steps.changes.outputs.docs }}
+      workflow-changed: ${{ steps.changes.outputs.workflow }}
       any-code-changed: ${{ steps.changes.outputs.code }}
     
     steps:
@@ -58,8 +59,15 @@ jobs:
           echo "docs=false" >> $GITHUB_OUTPUT
         fi
         
-        # Check for any code changes (.mjs or package.json)
-        if echo "$CHANGED_FILES" | grep -qE '\.(mjs|json)$'; then
+        # Check for workflow changes
+        if echo "$CHANGED_FILES" | grep -q '\.github/workflows/'; then
+          echo "workflow=true" >> $GITHUB_OUTPUT
+        else
+          echo "workflow=false" >> $GITHUB_OUTPUT
+        fi
+        
+        # Check for any code changes (.mjs, package.json, or workflows)
+        if echo "$CHANGED_FILES" | grep -qE '\.(mjs|json|yml|yaml)$|\.github/workflows/'; then
           echo "code=true" >> $GITHUB_OUTPUT
         else
           echo "code=false" >> $GITHUB_OUTPUT
@@ -69,7 +77,7 @@ jobs:
   test-compilation:
     runs-on: ubuntu-latest
     needs: detect-changes
-    if: needs.detect-changes.outputs.any-code-changed == 'true'
+    if: needs.detect-changes.outputs.any-code-changed == 'true' || needs.detect-changes.outputs.workflow-changed == 'true'
     
     steps:
     - name: Checkout repository
@@ -112,7 +120,7 @@ jobs:
   test-suites:
     runs-on: ubuntu-latest
     needs: [detect-changes, test-compilation]
-    if: needs.detect-changes.outputs.any-code-changed == 'true'
+    if: needs.detect-changes.outputs.any-code-changed == 'true' || needs.detect-changes.outputs.workflow-changed == 'true'
     
     steps:
     - uses: actions/checkout@v4
@@ -141,7 +149,7 @@ jobs:
   test-execution:
     runs-on: ubuntu-latest
     needs: [detect-changes, test-compilation]
-    if: needs.detect-changes.outputs.any-code-changed == 'true'
+    if: needs.detect-changes.outputs.any-code-changed == 'true' || needs.detect-changes.outputs.workflow-changed == 'true'
     
     steps:
     - uses: actions/checkout@v4
@@ -174,7 +182,7 @@ jobs:
   memory-check-linux:
     runs-on: ubuntu-latest
     needs: [detect-changes, test-compilation]
-    if: needs.detect-changes.outputs.any-code-changed == 'true'
+    if: needs.detect-changes.outputs.any-code-changed == 'true' || needs.detect-changes.outputs.workflow-changed == 'true'
     
     steps:
     - uses: actions/checkout@v4
@@ -239,7 +247,7 @@ jobs:
   memory-check-macos:
     runs-on: macos-latest
     needs: [detect-changes, test-compilation]
-    if: needs.detect-changes.outputs.any-code-changed == 'true'
+    if: needs.detect-changes.outputs.any-code-changed == 'true' || needs.detect-changes.outputs.workflow-changed == 'true'
     
     steps:
     - uses: actions/checkout@v4
@@ -318,7 +326,7 @@ jobs:
   memory-check-windows:
     runs-on: windows-latest
     needs: [detect-changes, test-compilation]
-    if: needs.detect-changes.outputs.any-code-changed == 'true'
+    if: needs.detect-changes.outputs.any-code-changed == 'true' || needs.detect-changes.outputs.workflow-changed == 'true'
     
     steps:
     - uses: actions/checkout@v4
@@ -467,10 +475,14 @@ jobs:
         echo "- Code files (.mjs): ${{ needs.detect-changes.outputs.mjs-changed }}"
         echo "- Package.json: ${{ needs.detect-changes.outputs.package-changed }}"
         echo "- Documentation (.md): ${{ needs.detect-changes.outputs.docs-changed }}"
+        echo "- Workflow files: ${{ needs.detect-changes.outputs.workflow-changed }}"
         echo ""
         echo "### Jobs Run:"
-        if [ "${{ needs.detect-changes.outputs.any-code-changed }}" = "true" ]; then
+        if [ "${{ needs.detect-changes.outputs.any-code-changed }}" = "true" ] || [ "${{ needs.detect-changes.outputs.workflow-changed }}" = "true" ]; then
           echo "✓ Code tests were run"
+          if [ "${{ needs.detect-changes.outputs.workflow-changed }}" = "true" ]; then
+            echo "  (triggered by workflow changes)"
+          fi
         else
           echo "⊘ Code tests were skipped (no code changes)"
         fi
