--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -421,9 +421,13 @@ jobs:
           echo "should_publish=true" >> $GITHUB_OUTPUT
           echo "version=$VERSION" >> $GITHUB_OUTPUT
         fi
+        
+        # Debug: Show what was set
+        echo "Debug: should_publish output will be: $(grep should_publish $GITHUB_OUTPUT | cut -d= -f2)"
+        echo "Debug: version output will be: $(grep version $GITHUB_OUTPUT | cut -d= -f2)"
 
   publish:
-    if: needs.check-publish.outputs.should_publish == 'true'
+    if: needs.check-publish.result == 'success'
     runs-on: ubuntu-latest
     needs: check-publish
     permissions:
@@ -434,27 +438,47 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: Check if should publish
+      id: should-publish
+      run: |
+        VERSION=$(node -p "require('./package.json').version")
+        PACKAGE_NAME=$(node -p "require('./package.json').name")
+        
+        # Double-check if version is already published
+        if npm view "$PACKAGE_NAME@$VERSION" version 2>/dev/null; then
+          echo "Version $VERSION already published - skipping"
+          echo "skip=true" >> $GITHUB_OUTPUT
+        else
+          echo "Version $VERSION will be published"
+          echo "skip=false" >> $GITHUB_OUTPUT
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+        fi
+    
     - name: Setup Node.js
+      if: steps.should-publish.outputs.skip != 'true'
       uses: actions/setup-node@v4
       with:
         node-version: 20.x
         registry-url: 'https://registry.npmjs.org'
         
     - name: Make scripts executable
+      if: steps.should-publish.outputs.skip != 'true'
       run: |
         chmod +x hive.mjs
         chmod +x solve.mjs
         
     - name: Publish to NPM
+      if: steps.should-publish.outputs.skip != 'true'
       run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         
     - name: Create GitHub Release
+      if: steps.should-publish.outputs.skip != 'true'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        VERSION=${{ needs.check-publish.outputs.version }}
+        VERSION=${{ steps.should-publish.outputs.version }}
         PACKAGE_NAME=$(node -p "require('./package.json').name")
         gh release create "v${VERSION}" \
           --title "${VERSION}" \
