--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -434,8 +434,7 @@ jobs:
 
   # === PUBLISH TO NPM ===
   publish:
-    # Only publish when there's a new version and all tests pass
-    if: needs.detect-changes.outputs.new-version == 'true'
+    if: always()
     runs-on: ubuntu-latest
     needs: [detect-changes, all-tests-complete]
     permissions:
@@ -451,21 +450,28 @@ jobs:
       with:
         node-version: 20.x
         registry-url: 'https://registry.npmjs.org'
-        
-    - name: Make scripts executable
+    
+    - name: Publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        if [ "${{ needs.detect-changes.outputs.new-version }}" != "true" ]; then
+          echo "⊘ Publishing skipped (no new version detected)"
+          echo "  new-version output: ${{ needs.detect-changes.outputs.new-version }}"
+          exit 0
+        fi
+        
+        echo "✓ New version detected, proceeding with publish"
+        
+        # Make scripts executable
         chmod +x hive.mjs
         chmod +x solve.mjs
         
-    - name: Publish to NPM
-      run: npm publish --access public
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        # Publish to NPM
+        npm publish --access public
         
-    - name: Create GitHub Release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
+        # Create GitHub Release
         VERSION=${{ needs.detect-changes.outputs.version }}
         PACKAGE_NAME=$(node -p "require('./package.json').name")
         gh release create "v${VERSION}" \
