--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -432,11 +432,23 @@ jobs:
         fi
         echo "✅ All tests passed successfully!"
 
+  # === SHOULD PUBLISH CHECK ===
+  should-publish:
+    # Synthetic job that checks if we should publish
+    if: needs.detect-changes.outputs.new-version == 'true'
+    runs-on: ubuntu-latest
+    needs: [detect-changes]
+    
+    steps:
+    - name: Confirm publish
+      run: |
+        echo "✅ New version detected: will proceed with publish"
+        echo "Version to publish: ${{ needs.detect-changes.outputs.version }}"
+
   # === PUBLISH TO NPM ===
   publish:
-    if: always()
     runs-on: ubuntu-latest
-    needs: [detect-changes, all-tests-complete]
+    needs: [should-publish, all-tests-complete]
     permissions:
       contents: write  # Required for creating releases
       packages: write  # Required for publishing packages
@@ -450,29 +462,22 @@ jobs:
       with:
         node-version: 20.x
         registry-url: 'https://registry.npmjs.org'
-    
-    - name: Publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: Make scripts executable
       run: |
-        if [ "${{ needs.detect-changes.outputs.new-version }}" != "true" ]; then
-          echo "⊘ Publishing skipped (no new version detected)"
-          echo "  new-version output: ${{ needs.detect-changes.outputs.new-version }}"
-          exit 0
-        fi
-        
-        echo "✓ New version detected, proceeding with publish"
-        
-        # Make scripts executable
         chmod +x hive.mjs
         chmod +x solve.mjs
         
-        # Publish to NPM
-        npm publish --access public
+    - name: Publish to NPM
+      run: npm publish --access public
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         
-        # Create GitHub Release
-        VERSION=${{ needs.detect-changes.outputs.version }}
+    - name: Create GitHub Release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        VERSION=$(node -p "require('./package.json').version")
         PACKAGE_NAME=$(node -p "require('./package.json').name")
         gh release create "v${VERSION}" \
           --title "${VERSION}" \
