Add IDE files to .gitignore
Added common IDE and editor files including .idea/, .vscode/, vim swap files, and other IDE-specific directories to prevent them from being tracked in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,18 @@ vite.config.ts.timestamp-*
 
 # macOS
 .DS_Store
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+*.iml
+*.iws
+*.ipr
+.nb-gradle/
+.gradle/
