--- a/coolify/docker-compose.yml
+++ b/coolify/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
       # Claude/AI Configuration
       - CLAUDE_API_KEY=${CLAUDE_API_KEY:-}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-${CLAUDE_API_KEY}}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
 
       # Application Settings
       - NODE_ENV=${NODE_ENV:-production}
