--- a/coolify/docker-compose.yml
+++ b/coolify/docker-compose.yml
@@ -11,34 +11,35 @@ services:
     # Environment variables for the application
     environment:
       # GitHub Configuration
-      - GITHUB_TOKEN=${GITHUB_TOKEN}
-      - GITHUB_ORGANIZATION=${GITHUB_ORGANIZATION:-}
-      - GH_TOKEN=${GITHUB_TOKEN}  # Some tools expect GH_TOKEN
+      - GITHUB_TOKEN
+      - GITHUB_ORGANIZATION
+      - GH_TOKEN=${GITHUB_TOKEN}
 
       # Claude/AI Configuration
-      - CLAUDE_API_KEY=${CLAUDE_API_KEY:-}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
+      - CLAUDE_API_KEY
+      - ANTHROPIC_API_KEY
 
-      # Application Settings
-      - NODE_ENV=${NODE_ENV:-production}
-      - MONITOR_TAG=${MONITOR_TAG:-help wanted}
-      - CONCURRENCY=${CONCURRENCY:-2}
-      - INTERVAL=${INTERVAL:-300}
-      - MODEL=${MODEL:-sonnet}
-      - ALL_ISSUES=${ALL_ISSUES:-false}
-      - SKIP_ISSUES_WITH_PRS=${SKIP_ISSUES_WITH_PRS:-false}
-      - FORK=${FORK:-true}
-      - MAX_ISSUES=${MAX_ISSUES:-0}
-      - PULL_REQUESTS_PER_ISSUE=${PULL_REQUESTS_PER_ISSUE:-1}
-      - ATTACH_LOGS=${ATTACH_LOGS:-false}
-      - VERBOSE=${VERBOSE:-false}
+      # Application Settings (with defaults)
+      - NODE_ENV=production
+      - MONITOR_TAG=${MONITOR_TAG}
+      - CONCURRENCY=${CONCURRENCY}
+      - INTERVAL=${INTERVAL}
+      - MODEL=${MODEL}
+      - ALL_ISSUES=${ALL_ISSUES}
+      - SKIP_ISSUES_WITH_PRS=${SKIP_ISSUES_WITH_PRS}
+      - FORK=${FORK}
+      - MAX_ISSUES=${MAX_ISSUES}
+      - PULL_REQUESTS_PER_ISSUE=${PULL_REQUESTS_PER_ISSUE}
+      - ATTACH_LOGS=${ATTACH_LOGS}
+      - VERBOSE=${VERBOSE}
 
       # Coolify/Container Settings
-      - PORT=${PORT:-3000}
-      - TZ=${TZ:-UTC}
+      - PORT=${PORT}
+      - TZ=${TZ}
 
     # Command override - pass the GitHub URL and any additional args
-    command: ${GITHUB_URL:-} ${HIVE_ARGS:-}
+    # Removed variable substitution to avoid Coolify parsing issues
+    # command: Will be set by Coolify or use default ENTRYPOINT
 
     # Volumes for persistent data
     volumes:
@@ -63,11 +64,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '${CPU_LIMIT:-2}'
-          memory: ${MEMORY_LIMIT:-4G}
+          cpus: '2'
+          memory: 4G
         reservations:
-          cpus: '${CPU_RESERVATION:-0.5}'
-          memory: ${MEMORY_RESERVATION:-1G}
+          cpus: '0.5'
+          memory: 1G
 
     # Restart policy
     restart: unless-stopped
