Update FORK default to false in Coolify configuration
- Set FORK=false as default in .env.example since most users work on their own repos/forks
- Added explanatory comment about when to use FORK=true (only for repos without write access)
- Updated README.md to reflect the new default value

This prevents confusion and errors when users monitor their own repositories or forks they control.

--- a/coolify/.env.example
+++ b/coolify/.env.example
@@ -36,7 +36,9 @@ CONCURRENCY=2
 INTERVAL=300
 MODEL=sonnet
 PULL_REQUESTS_PER_ISSUE=1
-FORK=true
+# Fork mode - set to true ONLY when monitoring repos you don't have write access to
+# For your own repositories or forks, keep this as false (default)
+FORK=false
 
 # Logging Settings
 ATTACH_LOGS=false
