Fix Coolify environment variable handling in start.sh
- Update start.sh to properly pass all environment variables as CLI options to hive.mjs
- Build complete command line with all supported options (monitor-tag, fork, verbose, etc.)
- Add debug output showing the actual command being executed
- Document additional environment variables in .env.example (DRY_RUN, ONCE, PROJECT_MODE, etc.)
- Handle both boolean flags and value options correctly

This ensures all Coolify environment settings are properly passed to hive.mjs, fixing issues where options like FORK were not being respected.

--- a/coolify/.env.example
+++ b/coolify/.env.example
@@ -44,6 +44,18 @@ FORK=false
 ATTACH_LOGS=false
 VERBOSE=false
 
+# Optional Advanced Settings
+# DRY_RUN=false              # Test without actually processing issues
+# ONCE=false                 # Run once and exit instead of continuous monitoring
+# MIN_DISK_SPACE=500         # Minimum required disk space in MB
+# AUTO_CLEANUP=false         # Clean temp directories when finished
+
+# GitHub Projects v2 Settings (optional)
+# PROJECT_MODE=false         # Enable project-based monitoring
+# PROJECT_NUMBER=            # GitHub Project number to monitor
+# PROJECT_OWNER=             # GitHub Project owner (org or user)
+# PROJECT_STATUS=Ready       # Project column/status to monitor
+
 # Additional command-line arguments for hive.mjs
 HIVE_ARGS=
 
