Add YouTrack and TARGET_BRANCH support to Coolify configuration
- Add YouTrack environment variables to start.sh CLI command builder
  - YOUTRACK_MODE enables YouTrack integration
  - YOUTRACK_PROJECT_CODE specifies which project to monitor
  - YOUTRACK_STAGE defines which issue stage to watch
- Add TARGET_BRANCH environment variable for custom PR target branches
- Update .env.example with YOUTRACK_MODE flag (other YouTrack vars were already present)

These configurations prepare for the upcoming YouTrack integration and custom target branch features, allowing users to monitor YouTrack projects and create PRs against branches like 'develop' instead of main.

--- a/coolify/.env.example
+++ b/coolify/.env.example
@@ -24,6 +24,7 @@ ANTHROPIC_API_KEY=
 
 # YouTrack Configuration (OPTIONAL)
 # Set these to enable YouTrack integration instead of GitHub issues
+YOUTRACK_MODE=false
 YOUTRACK_URL=https://mycompany.youtrack.cloud
 YOUTRACK_API_KEY=perm:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 YOUTRACK_PROJECT_CODE=PROJECT
