Refactor YouTrack integration as sync module
- Remove YouTrack from solve.mjs completely (cleaner architecture)
- Keep YouTrack in hive.mjs but as a sync module
- Create youtrack-sync.mjs that syncs YouTrack issues to GitHub
- GitHub issues created with [PROJECT-123] in title for YouTrack linking
- When solve.mjs creates PRs, YouTrack will auto-link them via the ID
- Much cleaner separation of concerns:
  - hive.mjs: periodic scanner/controller
  - youtrack-sync.mjs: syncs YouTrack→GitHub
  - solve.mjs: only works with GitHub issues
- PR titles will include readable YouTrack ID for automatic linking

--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "lib.mjs",
     "claude.lib.mjs",
     "github.lib.mjs",
+    "youtrack.lib.mjs",
+    "youtrack-sync.mjs",
     "memory-check.mjs",
     "*.md"
   ]
