Fix critical undefined variable errors and add ESLint configuration
- Fixed undefined 'error' variable in solve.mjs catch block (lines 1448-1483)
- Fixed undefined 'argv' parameter in handleExecutionError functions
- Fixed undefined 'limitReached' variable in finally block
- Fixed undefined 'shouldAttachLogs' parameter in showSessionSummary
- Fixed undefined 'cleanErrorMessage' import in solve.results.lib.mjs
- Added ESLint configuration to prevent undefined variable errors
- Added ESLint as dev dependency with npm scripts for linting
- Auto-fixed quote style issues across all files for consistency
- Both hive.mjs and solve.mjs now work correctly

This resolves issue #204 where the solve command was not working due to
undefined variable references that would cause runtime errors.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "review": "./review.mjs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint hive.mjs solve.mjs solve.*.lib.mjs lib.mjs claude.lib.mjs github.lib.mjs memory-check.mjs",
+    "lint:fix": "eslint hive.mjs solve.mjs solve.*.lib.mjs lib.mjs claude.lib.mjs github.lib.mjs memory-check.mjs --fix"
   },
   "repository": {
     "type": "git",
@@ -52,5 +54,8 @@
     "github.lib.mjs",
     "memory-check.mjs",
     "*.md"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^8.57.0"
+  }
 }
